--- a/style/main.css
+++ b/style/main.css
@@ -1,13 +1,131 @@
 header {
+  position: relative;
   width: 100%;
-  height: 150px;
-  background-color: black;
+  height: 300px;
+  background-color: #141b33;
   color: white;
   font-size: 3.2rem;
 }
-footer {
-  margin-top: 703px;
+
+.jm-topNavMenu {
+  display: flex;
+  justify-content: end;
+  position: fixed;
+  width: 100vw;
+  border: 2px solid gold;
+  padding: 30px 0;
+}
+
+.jm-topNavMenu > ul {
+  display: flex;
+}
+
+.jm-topNav {
+  display: flex;
+  justify-content: end;
+  border: 1px solid #fff;
+}
+
+/* 계절 메뉴 테그*/
+
+.jm-topNavMenu > ul > li > a {
+  font-size: 3.2rem;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.jm-topNavMenu > ul > li {
+  margin-right: 30px;
+}
+
+.jm-mainMenuBtn {
+  display: flex;
+  align-items: center;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+/* 메인페이지 이미지 */
+.jm-mainImgBox {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1000px;
+  height: 650px;
+  border: 3px solid gold;
+  text-align: center;
+  align-content: center;
+  /* overflow: hidden; */
+}
+
+.jm-mainImgBox > .jm-mainImgs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 3000px;
+  height: 100%;
+}
+
+.jm-mainImg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 80%;
+  border: 1px solid blue;
+  font-size: 60px;
+  text-align: center;
+  align-items: center;
+}
+
+/* 메인 버튼 */
+.jm-mainPrevBtn,
+.jm-mainNextBtn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: gold;
+  font-size: 30px;
+}
+
+.jm-mainPrevBtn {
+  left: 0;
+}
+
+.jm-mainNextBtn {
+  right: 0;
+}
+
+/* 사람 아이콘 */
+.jm-pepleIcon {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  width: 500px;
   height: 100px;
-  background-color: black;
+}
+
+.jm-pepleIcon > li {
+  width: 50%;
+  height: 100%;
+  /* border: 1px solid #000; */
+  align-content: center;
+}
+
+.jm-pepleIcon > li > ul {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.jm-pepleIcon > li > ul > li {
+  width: 50%;
+  height: 100%;
+  border: 1px solid #000;
+  align-content: center;
 }
