--- a/style/main.css
+++ b/style/main.css
@@ -65,17 +65,18 @@ body{overflow-x: hidden;}
 }
 /* img style */
 .hi-seasonEnf-img{
-  width: 40rem; height: 40rem; background-color: aqua; 
+  width: 40em; height: 40em; background-color: aqua; 
   align-content: end; margin-left: 10rem;
 }
 .hi-seasonEnf-imgLabel{
   width: 100%; height: 1.5rem; background-color: rgba(20,20,57,0.7);
   display: flex; justify-content: end; align-items: center; color: white;
+  cursor: pointer;
 }
 .hi-seasonEnf-imgLabel>span{padding-right: 0.5rem; color: white;}
 /* story style */
 .hi-seasonEnf-txtB{
-  width: 60rem; height: 80%;
+  width: 60rem; height: 70%;
 }
 .hi-seasonEnf-txtTop{
   width: 40%; height: 5rem;
@@ -84,5 +85,11 @@ body{overflow-x: hidden;}
   color: white;
 }
 .hi-seasonEnf-txtName{
-  font-size: 2.5rem;
+  font-size: 2.5rem; margin-top: 2rem; color: white;
+}
+.hi-seasonEnf-term{
+  color: rgba(255, 255, 255, 0.7); margin-top: 4rem;
+}
+.hi-seasonEnf-ex{
+  color: rgba(255, 255, 255, 0.7); margin-top: 6rem;
 }
