--- a/style/main.css
+++ b/style/main.css
@@ -240,8 +240,9 @@ header {
 }
 /* button style */
 .hi-seasonEnf-btn{
-  display: block; width: 5rem; height: 5rem;
+  display: block; width: 5rem; height: 5rem; color: white;
   border: none; cursor: pointer; background-color: transparent;
+  font-size: 2rem;
 }
 #hi-seasonEnf-btnL{
   margin-left: 10rem;
@@ -251,8 +252,13 @@ header {
 }
 /* main bord style */
 .hi-seasonEnf-mainBox{
-  width: 80%; height: 80%; display: flex; align-items: center;
-  gap: 10rem; overflow: hidden;
+  width: 80%; height: 80%;
+  overflow: hidden; position: relative;
+}
+.hi-seasonEnf-mainBox>div{
+  position: absolute;
+  display: flex; align-items: center;
+  gap: 10rem;
 }
 /* img style */
 .hi-seasonEnf-img{
@@ -362,8 +368,9 @@ header {
 
 .jb-section2 {
   width: 100%;
-  height: 75%;
-  padding: 2rem 0;
+  height: 90%;
+  /* padding: 2rem 0; 밑에 흰배경이 생성 됨 */
+  padding-bottom: 2rem;
   background-color: #0F172A;
   text-align: center;
   margin-top: 10%;
@@ -374,6 +381,7 @@ header {
   font-size: 3rem;
   font-family: "Rosarivo";
   color: #F8FAFC;
+  padding-top: 2rem;/*제목위 여백*/
 }
 .jb-subTit3 {
   font-size: 1.25rem;
@@ -386,8 +394,8 @@ header {
   display: none; /* 기본적으로 숨김 */
   padding: 4rem;
   border-radius: 1.5rem;
-  margin: 2rem;
-  background-color: #0F1626;
+  /* margin: 2rem; */
+  background-color: #0F172A;
 }
 
 /* 기본적으로 Spring이 보이도록 설정 */
@@ -450,8 +458,8 @@ button:hover {
 footer{
   width : 100%;
   height : 10rem;
+  position: relative;
   background-color: #0F172A;
-  padding-top: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
