--- a/style/spring.css
+++ b/style/spring.css
@@ -37,8 +37,10 @@
 }
 
 .sp1-sec1 {
+  position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 60rem;
   padding: 4rem;
 }
@@ -49,27 +51,36 @@
   font-weight: 400;
 }
 
-.sp1-sec1 > ul {
+.sp1-sec1-img-Box-bg {
   display: flex;
-  /* border: 1px solid #000; */
-  justify-content: center;
   align-items: center;
+  position: relative;
+  width: 1230px;
   height: 500px;
+  overflow: hidden;
 }
 
-.sp1-sec1 > ul > li {
+.sp1-sec1-img-Box {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+}
+
+.sp1-sec1-img-Box > li {
   width: 37rem;
   height: 30rem;
   border-radius: 10px;
 }
 
-.sp1-sec1 > ul > li {
+.sp1-sec1-img-Box > li {
+  position: relative;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.sp1-sec1 > ul > li:not(:last-child) {
+.sp1-sec1-img-Box > li:not(:last-child) {
   margin-right: 6rem;
 }
 .sp1-mainImg1 {
@@ -80,6 +91,29 @@
 }
 .sp1-mainImg3 {
   background-image: url("../img/spring-sub1/springSubMain3.jpg");
+}
+
+.sp-slide-left,
+.sp-slide-right {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+  top: 45%;
+}
+
+.sp-slide-left {
+  left: 0;
+  background-image: url("../img/icon/mainArrow.svg");
+}
+.sp-slide-right {
+  right: 0;
+  transform: rotate(180deg);
+  background-image: url("../img/icon/mainArrow.svg");
 }
 
 .sp1-sec2 {
