--- a/style/spring.css
+++ b/style/spring.css
@@ -115,8 +115,24 @@
   transform: rotate(180deg);
   background-image: url("../img/icon/mainArrow.svg");
 }
+/* 벚꽃 캔버스 */
+.sp1-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none; /* 캔버스 위에서 마우스 이벤트 무시 */
+}
 
+.sp1-sec2 > div {
+  position: relative;
+  z-index: 2; /* 콘텐츠를 캔버스 위로 보이게 설정 */
+}
+/* 벚꽃 캔버스 */
 .sp1-sec2 {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
