--- a/style/main.css
+++ b/style/main.css
@@ -35,6 +35,13 @@ header {
   justify-content: end;
 }
 
+/* top Btn */
+#hi-topBtn{
+  width: 4rem; height: 4rem; position: fixed;
+  z-index: 1000; bottom: 5rem; right: 5rem; cursor: pointer;
+}
+#hi-topBtn>img{width: 100%; height: 100%; object-fit: contain;}
+
 /* 계절 메뉴 테그*/
 
 .jm-topNavMenu > ul > li > a {
@@ -736,10 +743,14 @@ button:hover {
   overflow: hidden;
   transition: 0.5s;
 }
-.hi-appMenu>p{ padding: 1rem 0;}
+.hi-appMenu>p{ padding: 1rem 0; width: 100%; display: block;}
 .hi-appMenu a{
-  width: 100%; height: 100%;
-  color: white; font-size: 1.5rem;
+  width: 100%; height: 100%; display: block;
+  color: rgba(255, 255, 255, 0.5); font-size: 1.5rem;
+  transition: 0.3s;
+}
+.hi-appMenu p:hover a{
+  color: white; font-weight: 600;
 }
 
 /* menu close */
