--- a/style/spring.css
+++ b/style/spring.css
@@ -314,7 +314,7 @@
   }
 
   .sp1-imgLogo > a {
-    font-size: 2rem;
+    font-size: 2.4rem;
 
     /* color: #fff; */
   }
@@ -331,7 +331,7 @@
     /* display: flex;
     justify-content: space-between;
     align-items: center; */
-    padding: 1rem;
+    padding: 2rem;
     /* height: 8rem;
     background-color: #141b33; */
   }
@@ -462,5 +462,9 @@
   }
   .sp1-sec4 > ul {
     height: auto;
+  }
+
+  .mb-hidden {
+    display: none;
   }
 }
