--- a/style/main.css
+++ b/style/main.css
@@ -25,12 +25,19 @@ header {
   z-index: 1000;
 }
 
-.hi-topMenuImgLogo{
-  width: 15rem; height: 5rem;
-  position: absolute; 
-  top: 50%; transform: translateY(-50%); left: 20rem;
+.hi-topMenuImgLogo {
+  width: 15rem;
+  height: 5rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 20rem;
 }
-.hi-topMenuImgLogo>a>img{width: 100%; height: 100%; object-fit: contain;}
+.hi-topMenuImgLogo > a > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
 .jm-topNavMenu > ul {
   display: flex;
@@ -357,15 +364,21 @@ header {
   margin-left: 10rem;
   position: relative;
 }
-.hi-seasonEnf-img>img{
-  position: absolute; top: 0;
-  width: 100%; height: 100%; object-fit: cover;
+.hi-seasonEnf-img > img {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .hi-seasonEnf-imgLabel {
-  width: 100%; height: 3rem;
-  position: absolute; bottom: 0;
+  width: 100%;
+  height: 3rem;
+  position: absolute;
+  bottom: 0;
   background-color: rgba(20, 20, 57, 0.7);
-  display: flex; z-index: 1;
+  display: flex;
+  z-index: 1;
   justify-content: end;
   align-items: center;
   color: white;
@@ -576,7 +589,8 @@ header {
   color: #ffffff;
 }
 .hi-reBoxSp-reviewStory:nth-child(2) {
-  margin-top: 1rem; color: #ffc0cb;
+  margin-top: 1rem;
+  color: #ffc0cb;
   font-size: 1.5rem;
 }
 
@@ -597,7 +611,8 @@ header {
   color: #ffffff;
 }
 .hi-reBoxSu-reviewStory:nth-child(2) {
-  margin-top: 1rem; color: #22d5ff;
+  margin-top: 1rem;
+  color: #22d5ff;
   font-size: 1.5rem;
 }
 
@@ -618,7 +633,8 @@ header {
   color: #ffffff;
 }
 .hi-reBoxAu-reviewStory:nth-child(2) {
-  margin-top: 1rem; color: #ffba08;
+  margin-top: 1rem;
+  color: #ffba08;
   font-size: 1.5rem;
 }
 
@@ -705,17 +721,25 @@ header {
   top: 0;
   z-index: 1001;
   display: flex;
-  justify-content: center;}
-#hi-mainMenu-web{
-  width: 100vw; height: 100%;
-  background-color: #141B33;
-  position: absolute; overflow: hidden;
-  top: 0; z-index: 1001;
-  display: flex; justify-content: center;
+  justify-content: center;
 }
-#hi-mainMenu-web.hideMenu{display: none;}
-#hi-mainMenu-web>div{
-  width: 60%; margin-top: 10%;
+#hi-mainMenu-web {
+  width: 100vw;
+  height: 100%;
+  background-color: #141b33;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  z-index: 1001;
+  display: flex;
+  justify-content: center;
+}
+#hi-mainMenu-web.hideMenu {
+  display: none;
+}
+#hi-mainMenu-web > div {
+  width: 60%;
+  margin-top: 10%;
 }
 .hi-menuBoxTop {
   width: 100%;
@@ -778,17 +802,28 @@ header {
   overflow: hidden;
   top: 0;
   z-index: 1001;
-  align-content: center;}
-#hi-mainMenu-app{
-  width: 100vw; height: 100%;
-  background-color: #141B33;
-  position: absolute; overflow: hidden;
-  top: 0; z-index: 1001; align-content: center;
+  align-content: center;
 }
-#hi-mainMenu-app{display: none;}
-.hi-mainMenu-appBoxtop{
-  width: 100%; display: flex; justify-content: left; align-items: center;
-  border-bottom: 0.1rem solid white; position: relative;
+#hi-mainMenu-app {
+  width: 100vw;
+  height: 100%;
+  background-color: #141b33;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  z-index: 1001;
+  align-content: center;
+}
+#hi-mainMenu-app {
+  display: none;
+}
+.hi-mainMenu-appBoxtop {
+  width: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border-bottom: 0.1rem solid white;
+  position: relative;
 }
 .hi-mainMenu-appBoxtop > div {
   font-family: "Rosarivo";
