--- a/style/spring.css
+++ b/style/spring.css
@@ -310,8 +310,7 @@
 /* 모바일 */
 @media (max-width: 768px) {
   body {
-    max-width: 100%;
-    width: 100vw;
+    max-width: 100vw !important;
     min-height: 100vh;
     overflow-x: hidden;
   }
@@ -350,6 +349,7 @@
     padding: 4rem;
     height: 60rem;
     background-color: #141b33;
+    overflow-x: hidden;
     /* justify-content: center;
     align-items: center;
     /* width: 100%; */
@@ -387,8 +387,8 @@
   }
 
   .sp1-sec4-card-box > li {
-    width: 150px;
-    height: 200px;
+    width: 130px;
+    height: 170px;
     margin-right: 0;
     margin-bottom: 2rem;
   }
@@ -410,6 +410,7 @@
     position: absolute;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
   }
 
   .sp1-sec1-img-Box > li {
