--- a/style/spring.css
+++ b/style/spring.css
@@ -397,7 +397,7 @@
   }
 
   .sp1-sec4-card > li:nth-child(2) {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 
   .sp1-sec1 {
@@ -475,4 +475,17 @@
   .mb-hidden {
     display: none;
   }
+}
+
+@media (min-width: 502px) and (max-width: 768px) {
+  .sp1-sec4-card-box > li {
+    width: 205px;
+    height: 220px;
+    margin-right: 0;
+    margin-bottom: 2rem;
+  }
+}
+
+/* 추가수정사항 */
+@media (min-width: 727px) and (max-width: 768px) {
 }
