--- a/style/season-sub.css
+++ b/style/season-sub.css
@@ -319,11 +319,36 @@
     display: none;
   }
 
+  .sp2-section1 {
+    overflow: hidden; /* 세로 스크롤을 숨깁니다 */
+  }
+
   .sp2-mainBox1 {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    width: 300%;
-    overflow-x: scroll;
+    position: relative;
+    width: 400%; /* 전체 너비를 4배로 설정하여 4개의 자식 요소가 보이도록 */
+    display: flex;
+    flex-wrap: nowrap; /* 자식 요소들이 한 줄에 가로로 나열되도록 */
+    overflow-x: auto; /* 가로 스크롤만 활성화 */
+  }
+
+  .sp2-subBox1,
+  .sp2-subBox2,
+  .sp2-subBox3,
+  .sp2-subBox4 {
+    position: relative;
+    width: 25%; /* 각 자식 요소들이 25%씩 차지하도록 설정 */
+    height: 100%;
+    margin: 0;
+  }
+
+  .sp2-subImg1,
+  .sp2-subImg2,
+  .sp2-subImg3,
+  .sp2-subImg4 {
+    width: 100%;
+    height: 50%;
+    background-color: rgb(90, 77, 97);
+    border-radius: 2rem;
+    color: #fff;
   }
 }
