--- a/style/season-sub.css
+++ b/style/season-sub.css
@@ -1,7 +1,7 @@
 /* 관광지 섹션 스타일 */
 .sp2-section1 {
   width: 100%;
-  height: 100%;
+  height: 90%;
   padding: 7rem 0;
   background-color: #0f172a;
   text-align: center;
@@ -28,7 +28,7 @@
 .sp2-subBox4 {
   position: relative;
   width: 24%;
-  height: 100%;
+  height: 80%;
   margin: 0 auto;
 }
 .sp2-subImg1,
@@ -99,7 +99,7 @@
   width: 90%;
   height: 75%;
   position: relative;
-  margin: 10rem auto;
+  margin: 9rem auto;
   display: flex;
 }
 .sp2-foodBox1,
@@ -320,35 +320,47 @@
   }
 
   .sp2-section1 {
-    overflow: hidden; /* 세로 스크롤을 숨깁니다 */
-  }
-
-  .sp2-mainBox1 {
-    position: relative;
-    width: 400%; /* 전체 너비를 4배로 설정하여 4개의 자식 요소가 보이도록 */
-    display: flex;
-    flex-wrap: nowrap; /* 자식 요소들이 한 줄에 가로로 나열되도록 */
-    overflow-x: auto; /* 가로 스크롤만 활성화 */
-  }
-
-  .sp2-subBox1,
-  .sp2-subBox2,
-  .sp2-subBox3,
-  .sp2-subBox4 {
-    position: relative;
-    width: 25%; /* 각 자식 요소들이 25%씩 차지하도록 설정 */
     height: 100%;
+  }
+  .sp2-mainBox1 {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
     margin: 0;
+    white-space: nowrap;
+    padding: 4rem;
+    /* border: 1px solid #fff; */
+  }
+
+  .sp2-mainBox1 > div {
+    display: inline-block;
+    width: 100%;
+    height: 500px;
+    /* border: 1px solid yellow; */
+  }
+
+  .sp2-mainBox1 > div:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  .sp2-mainBox1 > div:nth-child(even) {
+    position: relative;
+    top: -288px;
+  }
+
+  .sp2-subTit1 {
+    margin-bottom: 45px;
   }
 
   .sp2-subImg1,
+  .sp2-subImg3 {
+    margin-bottom: 40px;
+  }
+
   .sp2-subImg2,
-  .sp2-subImg3,
   .sp2-subImg4 {
-    width: 100%;
-    height: 50%;
-    background-color: rgb(90, 77, 97);
-    border-radius: 2rem;
-    color: #fff;
+    margin-top: 40px;
   }
 }
