--- a/style/main.css
+++ b/style/main.css
@@ -708,6 +708,7 @@ header {
   margin: 20px;
   width: 300px;
   font-size: 16px;
+  border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5);
 }
 
 #searchButton {
@@ -722,6 +723,8 @@ header {
   margin-top: 20px;
   z-index: 30;
 }
+
+.hi-mapSection{position: relative; padding: 3rem 0;}
 
 /* 웹버전 메뉴 */
 #hi-mainMenu-web{
@@ -757,6 +760,13 @@ header {
 .hi-menuBoxTop>div{
   font-family: "Rosarivo"; color: white;
   font-size: 3rem; margin-right: 1rem; padding-left: 0.5rem;
+}
+.hi-menuBoxTop>div:nth-child(1){
+  margin-right: 1rem; padding-left: 0.5rem;
+  width: 13rem; height: 3rem; margin-bottom: 0.5rem;
+}
+.hi-menuBoxTop>div:nth-child(1) img{
+  width: 100%; height: 100%; object-fit: contain;
 }
 .hi-menuBoxTop>span{
   font-family: "Rosarivo"; color: white;
@@ -819,6 +829,13 @@ header {
 .hi-mainMenu-appBoxtop>div{
   font-family: "Rosarivo"; color: white;
   font-size: 2.5rem; margin-right: 1rem; padding-left: 0.5rem;
+}
+.hi-mainMenu-appBoxtop>div:nth-child(1){
+  margin-right: 1rem; padding-left: 0.5rem;
+  width: 12rem; height: 3rem; margin-bottom: 0.5rem;
+}
+.hi-mainMenu-appBoxtop>div:nth-child(1) img{
+  width: 100%; height: 100%; object-fit: contain;
 }
 .hi-mainMenu-appBoxtop>span{
   font-family: "Rosarivo"; color: white;
@@ -927,3 +944,10 @@ footer > span {
   opacity: 0.5;
   transform: rotate(30deg);
 }
+
+
+/* pc */
+@media (min-width:1025px) {} 
+
+/* 모바일 */
+@media (max-width:768px) {} 
