--- a/style/season-sub.css
+++ b/style/season-sub.css
@@ -411,4 +411,94 @@
     width: 85%;
     height: 85%;
   }
+
+  .sp1-navMenu {
+    display: none;
+  }
+
+  /* 갤러리 */
+  .sp3-section1 {
+    width: 100%;
+    height: 100%;
+    padding: 2rem 0;
+    text-align: center;
+    background: linear-gradient(to bottom, #141b33 0%, #ffffff 100%);
+    margin: 0;
+  }
+
+  /* 제목 */
+  .sp3-subTit1 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
+  }
+
+  /* 본문 */
+  .sp3-galBox1,
+  .sp3-galBox2 {
+    width: 100%;
+    height: 25%;
+    margin: 1rem auto;
+    display: flex;
+  }
+  .sp3-galBox1 {
+    margin-top: 10rem;
+  }
+  .sp3-galImgBox {
+    width: 25%;
+    height: 70%;
+    background-color: green;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+
+  /* 모달 스타일 */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-content {
+    position: relative;
+    width: 50%;
+    height: 60%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
+  }
+
+  .modal-img {
+    margin-top: 10rem;
+    width: 80%;
+    height: 70%;
+    background-color: gray;
+  }
+
+  .modal-text {
+    margin-top: 5rem;
+    width: 80%;
+    height: 50%;
+    text-align: center;
+    font-size: 1.4rem;
+    color: #333333;
+    padding: 1rem;
+  }
+
+  #closeBtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 2rem;
+    cursor: pointer;
+  }
 }
