--- a/style/main.css
+++ b/style/main.css
@@ -322,14 +322,13 @@ header {
   margin: auto;
   background-color: rgba(20, 20, 57, 0.85);
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 /* button style */
 .hi-seasonEnf-btn {
   display: block;
-  width: 5rem;
-  height: 5rem;
+  width: 3rem;
+  height: 3rem;
   color: white;
   border: none;
   cursor: pointer;
@@ -337,10 +336,10 @@ header {
   font-size: 2rem;
 }
 #hi-seasonEnf-btnL {
-  margin-left: 10rem;
+  margin-left: 5%;
 }
 #hi-seasonEnf-btnR {
-  margin-right: 10rem;
+  margin-right:  5%;
 }
 /* main bord style */
 .hi-seasonEnf-mainBox {
@@ -359,7 +358,6 @@ header {
 .hi-seasonEnf-img {
   width: 40em;
   height: 40em;
-  background-color: aqua;
   align-content: end;
   margin-left: 10rem;
   position: relative;
@@ -583,7 +581,6 @@ header {
   color: #ffc0cb;
   border: 0.1rem solid #ffc0cb;
   background-color: #ffc0cb15;
-  align-content: center;
 }
 .hi-reBoxSp-reviewStory:nth-child(1) {
   color: #ffffff;
@@ -916,10 +913,10 @@ header {
   float: right;
   margin-top: 0.5rem;
 }
-.hi-accordionMenu.on {
+.hi-accordionMenu.ons {
   background-color: rgba(169, 169, 169, 0.3);
 }
-.on::after {
+.ons::after {
   content: "▲";
   font-size: 1rem;
 }
@@ -997,6 +994,11 @@ footer > span {
   display: flex;
   align-items: center;
 }
+.hi-downBox > a {
+  height: 2rem; cursor: pointer;
+  display: flex;
+  align-items: center;
+}
 .hi-footerSubtxt {
   padding-left: 0.5rem;
   color: rgba(255, 255, 255, 0.5);
@@ -1013,5 +1015,519 @@ footer > span {
 /* pc */
 @media (min-width:1025px) {} 
 
+@media (min-width:769px) and (max-width:1024px) 
+{
+  /* header */
+  .jm-topNavMenu{
+    height: 10rem;
+  }
+  /* logo */
+  .hi-topMenuImgLogo {
+    position: absolute;
+    left: 10%; top: 5rem;
+  }
+
+  .jm-topNavMenu > ul:nth-child(2) {
+    display: none;
+  }
+  .jm-topNavMenu > ul:nth-child(3) {
+    position: absolute; top: 50%; transform: translateY(-30%);
+    margin-right: 3rem; display: block;
+  }
+
+
+  /* 메인페이지 이미지 */
+  header{margin-bottom: 25rem;}
+.jm-mainImgBox {
+  width: 90%;
+  height: 37rem;
+}
+
+.jm-mainImgBox > .jm-mainImgs {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+}
+
+.jm-mainImgs > li {
+  position: relative;
+  width: 250px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: 2s;
+}
+
+.jm-mainImg.on {
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+}
+.hi-blankColor{display: none;}
+
+/* hein section 02 ----------*/
+.hi-seasonEnf {
+  width: 100vw;
+  height: 80%;
+  margin: auto;
+  background-color: rgba(20, 20, 57, 0.85);
+  display: flex;
+  align-items: center;
+}
+#hi-seasonEnf-btnL {
+  margin-left: 0%;
+  position: absolute;
+  left: 3rem;
+}
+#hi-seasonEnf-btnR {
+  margin-right:  0%;
+  position: absolute;
+  right: 2rem;overflow: none;
+}
+.hi-seasonEnf-mainBox{
+  position: absolute; width: 70%;
+  left: 50%; transform: translateX(-50%);
+}
+.hi-seasonEnf-mainBox > div {
+  position: absolute; width: 100%; height: 100%;
+  display: block;
+  gap: 10rem;
+}
+/* 이미지 */
+.hi-seasonEnf-img {
+  width: 85%;
+  height: 40%;
+  align-content: end;
+  position: relative;
+  margin-left: 0rem; top: 5rem;
+  left: 50%; transform: translateX(-50%);
+  border-radius: 2rem;
+  overflow: hidden;
+}
+/* text */
+.hi-seasonEnf-txtB {
+  width: 100%;
+  height: 55%; margin-top: 3rem;
+  position: relative; bottom: 0rem;
+}
+.hi-seasonEnf-txtTop {
+  width: 70%; margin: auto;
+  height: 5rem;
+  align-items: end;
+  padding-bottom: 0.3rem;
+  border-bottom: 0.1rem solid #22d5ff;
+  color: white; display: flex; justify-content: center;
+}
+.hi-seasonEnf-txtName {
+  width: 100%;
+  font-size: 2.5rem;
+  margin-top: 2rem;
+  color: white;
+  text-align: center;
+}
+.hi-seasonEnf-term {
+  width: 100%;
+  color: rgba(255, 255, 255, 0.7);
+  margin-top: 4rem; text-align: center;
+}
+.hi-seasonEnf-ex {
+  display: none;
+}
+
+
+/* save tour */
+.jb-section {
+  width: 100%;
+  height: 50%;
+  padding: 2rem 0;
+  background-color: #0f172a;
+  text-align: center;
+  position: relative;
+  margin-bottom: 5rem;
+}
+
+.jb-section1 {
+  width: 100%;
+  height: 43%;
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.jb-mainImgBox {
+  width: 115rem;
+  overflow: hidden;
+  position: relative;
+  margin: 50px auto;
+  margin-bottom: 15rem;
+}
+
+/* 개별 이미지 박스 */
+.jb-mainImgWrapper div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 25rem;
+  flex-shrink: 0;
+  margin-right: 3.5rem;
+}
+/* 이미지 스타일 */
+.jb-mainImg {
+  width: 100%;
+  height: 15rem;
+  background-color: #cbd5e1;
+  border-radius: 5rem;
+}
+
+/* 추억 기록,리뷰 페이지 */
+
+.jb-section2 {
+  width: 100%;
+  height: 140vh;
+  /* padding: 2rem 0; 밑에 흰배경이 생성 됨 */
+  background-color: #0f172a;
+  text-align: center;
+  margin-top: 15rem;
+}
+
+/* 리뷰 박스 스타일 */
+.jb-spRevBox1,
+.jb-spRevBox2,
+.jb-spRevBox3,
+.jb-spRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #ffc0cb;
+  border: 0.1rem solid #ffc0cb;
+  background-color: #ffc0cb15;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+.jb-suRevBox1,
+.jb-suRevBox2,
+.jb-suRevBox3,
+.jb-suRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #22d5ff;
+  border: 0.1rem solid #22d5ff;
+  background-color: #22d5ff15;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+.jb-auRevBox1,
+.jb-auRevBox2,
+.jb-auRevBox3,
+.jb-auRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #ffba08;
+  border: 0.1rem solid #ffba08;
+  background-color: #ffba0815;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+.jb-wiRevBox1,
+.jb-wirevBox2,
+.jb-wiRevBox3,
+.jb-wiRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #add8e6;
+  border: 0.1rem solid #add8e6;
+  background-color: #add8e615;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+#map {
+  width: 100%;
+  height: 50vh;
+  display: none;
+  margin-bottom: 5rem;
+}
+
+
+} 
+
 /* 모바일 */
-@media (max-width:768px) {} 
+@media (max-width:768px) {
+
+  /* header */
+  .jm-topNavMenu{
+    height: 10rem;
+  }
+  /* logo */
+  .hi-topMenuImgLogo {
+    position: absolute;
+    left: 10%; top: 5rem;
+  }
+
+  .jm-topNavMenu > ul:nth-child(2) {
+    display: none;
+  }
+  .jm-topNavMenu > ul:nth-child(3) {
+    position: absolute; top: 50%; transform: translateY(-30%);
+    margin-right: 3rem; display: block;
+  }
+
+
+  /* 메인페이지 이미지 */
+  header{margin-bottom: 25rem;}
+.jm-mainImgBox {
+  width: 80%;
+  height: 34rem;
+}
+
+.jm-mainImgBox > .jm-mainImgs {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+}
+
+.jm-mainImgs > li {
+  position: relative;
+  width: 250px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: 2s;
+}
+
+.jm-mainImg.on {
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+}
+.hi-blankColor{display: none;}
+
+/* hein section 01 ----------*/
+.hi-section{margin-bottom: 10rem;}
+.hi-section:nth-child(2){height: 100vh;}
+.hi-seasonT {
+  width: 80%;
+  height: 70%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.hi-seasonT > div {
+  width: 48%;
+  height: 45%;
+  align-content: center;
+}
+
+/* hein section 02 ----------*/
+.hi-seasonEnf {
+  width: 100vw;
+  height: 80%;
+  margin: auto;
+  background-color: rgba(20, 20, 57, 0.85);
+  display: flex;
+  align-items: center;
+}
+#hi-seasonEnf-btnL {
+  margin-left: 0%;
+  position: absolute;
+  left: 3rem;
+}
+#hi-seasonEnf-btnR {
+  margin-right:  0%;
+  position: absolute;
+  right: 2rem;overflow: none;
+}
+.hi-seasonEnf-mainBox{
+  position: absolute; width: 70%;
+  left: 50%; transform: translateX(-50%);
+}
+.hi-seasonEnf-mainBox > div {
+  position: absolute; width: 100%; height: 100%;
+  display: block;
+  gap: 10rem;
+}
+/* 이미지 */
+.hi-seasonEnf-img {
+  width: 85%;
+  height: 40%;
+  align-content: end;
+  position: relative;
+  margin-left: 0rem; top: 5rem;
+  left: 50%; transform: translateX(-50%);
+  border-radius: 2rem;
+  overflow: hidden;
+}
+/* text */
+.hi-seasonEnf-txtB {
+  width: 100%;
+  height: 55%; margin-top: 3rem;
+  position: relative; bottom: 0rem;
+}
+.hi-seasonEnf-txtTop {
+  width: 70%; margin: auto;
+  height: 5rem;
+  align-items: end;
+  padding-bottom: 0.3rem;
+  border-bottom: 0.1rem solid #22d5ff;
+  color: white; display: flex; justify-content: center;
+}
+.hi-seasonEnf-txtName {
+  width: 100%;
+  font-size: 2.5rem;
+  margin-top: 2rem;
+  color: white;
+  text-align: center;
+}
+.hi-seasonEnf-term {
+  width: 100%;
+  color: rgba(255, 255, 255, 0.7);
+  margin-top: 4rem; text-align: center;
+}
+.hi-seasonEnf-ex {
+  display: none;
+}
+
+
+/* save tour */
+.jb-section {
+  width: 100%;
+  height: 50%;
+  padding: 2rem 0;
+  background-color: #0f172a;
+  text-align: center;
+  position: relative;
+  margin-bottom: 5rem;
+}
+
+.jb-section1 {
+  width: 100%;
+  height: 43%;
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.jb-mainImgBox {
+  width: 115rem;
+  overflow: hidden;
+  position: relative;
+  margin: 50px auto;
+  margin-bottom: 15rem;
+}
+
+/* 개별 이미지 박스 */
+.jb-mainImgWrapper div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 25rem;
+  flex-shrink: 0;
+  margin-right: 3.5rem;
+}
+/* 이미지 스타일 */
+.jb-mainImg {
+  width: 100%;
+  height: 15rem;
+  background-color: #cbd5e1;
+  border-radius: 5rem;
+}
+
+/* 추억 기록,리뷰 페이지 */
+
+.jb-section2 {
+  width: 100%;
+  height: 140vh;
+  /* padding: 2rem 0; 밑에 흰배경이 생성 됨 */
+  background-color: #0f172a;
+  text-align: center;
+  margin-top: 15rem;
+}
+
+/* 리뷰 박스 스타일 */
+.jb-spRevBox1,
+.jb-spRevBox2,
+.jb-spRevBox3,
+.jb-spRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #ffc0cb;
+  border: 0.1rem solid #ffc0cb;
+  background-color: #ffc0cb15;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+.jb-suRevBox1,
+.jb-suRevBox2,
+.jb-suRevBox3,
+.jb-suRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #22d5ff;
+  border: 0.1rem solid #22d5ff;
+  background-color: #22d5ff15;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+.jb-auRevBox1,
+.jb-auRevBox2,
+.jb-auRevBox3,
+.jb-auRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #ffba08;
+  border: 0.1rem solid #ffba08;
+  background-color: #ffba0815;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+.jb-wiRevBox1,
+.jb-wirevBox2,
+.jb-wiRevBox3,
+.jb-wiRevBox4 {
+  width: 90%;
+  height: 10rem;
+  margin: 3rem auto;
+  border-radius: 2rem;
+  color: #add8e6;
+  border: 0.1rem solid #add8e6;
+  background-color: #add8e615;
+  align-content: center;
+  padding: 0 1rem;
+}
+
+#map {
+  width: 100%;
+  height: 50vh;
+  display: none;
+  margin-bottom: 5rem;
+}
+
+
+} 
