--- a/style/main.css
+++ b/style/main.css
@@ -712,7 +712,8 @@ header {
   margin: 20px;
   width: 300px;
   font-size: 16px;
-  border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 2rem;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 #searchButton {
@@ -728,7 +729,10 @@ header {
   z-index: 30;
 }
 
-.hi-mapSection{position: relative; padding: 3rem 0;}
+.hi-mapSection {
+  position: relative;
+  padding: 3rem 0;
+}
 
 /* 웹버전 메뉴 */
 #hi-mainMenu-web {
@@ -776,16 +780,23 @@ header {
   margin-right: 1rem;
   padding-left: 0.5rem;
 }
-.hi-menuBoxTop>div:nth-child(1){
-  margin-right: 1rem; padding-left: 0.5rem;
-  width: 13rem; height: 3rem; margin-bottom: 0.5rem;
+.hi-menuBoxTop > div:nth-child(1) {
+  margin-right: 1rem;
+  padding-left: 0.5rem;
+  width: 13rem;
+  height: 3rem;
+  margin-bottom: 0.5rem;
 }
-.hi-menuBoxTop>div:nth-child(1) img{
-  width: 100%; height: 100%; object-fit: contain;
+.hi-menuBoxTop > div:nth-child(1) img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
-.hi-menuBoxTop>span{
-  font-family: "Rosarivo"; color: white;
-  padding-left: 0.5rem; font-size: 2rem;
+.hi-menuBoxTop > span {
+  font-family: "Rosarivo";
+  color: white;
+  padding-left: 0.5rem;
+  font-size: 2rem;
   border-left: 0.1rem solid white;
 }
 
@@ -856,16 +867,23 @@ header {
   margin-right: 1rem;
   padding-left: 0.5rem;
 }
-.hi-mainMenu-appBoxtop>div:nth-child(1){
-  margin-right: 1rem; padding-left: 0.5rem;
-  width: 12rem; height: 3rem; margin-bottom: 0.5rem;
+.hi-mainMenu-appBoxtop > div:nth-child(1) {
+  margin-right: 1rem;
+  padding-left: 0.5rem;
+  width: 12rem;
+  height: 3rem;
+  margin-bottom: 0.5rem;
 }
-.hi-mainMenu-appBoxtop>div:nth-child(1) img{
-  width: 100%; height: 100%; object-fit: contain;
+.hi-mainMenu-appBoxtop > div:nth-child(1) img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
-.hi-mainMenu-appBoxtop>span{
-  font-family: "Rosarivo"; color: white;
-  padding-left: 0.5rem; font-size: 2rem;
+.hi-mainMenu-appBoxtop > span {
+  font-family: "Rosarivo";
+  color: white;
+  padding-left: 0.5rem;
+  font-size: 2rem;
   border-left: 0.1rem solid white;
 }
 #hi-accordionMenu-Close {
@@ -1009,9 +1027,10 @@ footer > span {
   transform: rotate(30deg);
 }
 
-
 /* pc */
-@media (min-width:1025px) {} 
+@media (min-width: 1025px) {
+}
 
 /* 모바일 */
-@media (max-width:768px) {} 
+@media (max-width: 768px) {
+}
