--- a/style/season-layout.css
+++ b/style/season-layout.css
@@ -253,6 +253,7 @@
   flex-direction: column;
   justify-content: center;
   /* background-color: #141b33; */
+  width: 100%;
   height: 60rem;
 }
 
