--- a/style/season-sub.css
+++ b/style/season-sub.css
@@ -76,7 +76,12 @@
 .sp2-subInf4 {
   width: 100%;
   height: 50%;
+  display: flex;
+  align-items: center;
   background-color: white;
+  font-size: 1.4rem;
+  text-align: start;
+  padding: 2rem;
 }
 
 /* 제철음식 세션 스타일 */
@@ -127,6 +132,11 @@
   width: 100%;
   height: 10%;
   background-color: rgb(90, 77, 97);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.5rem;
 }
 .sp2-foodInf1,
 .sp2-foodInf2,
@@ -136,6 +146,12 @@
   width: 100%;
   height: 40%;
   background-color: rgb(90, 77, 97);
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: 1.5rem;
+  text-align: start;
+  padding: 2rem;
 }
 
 /* 봄에 열리는 축제 */
