--- a/style/summer.css
+++ b/style/summer.css
@@ -43,7 +43,7 @@
   font-size: 1.8rem;
   font-weight: 600;
   color: #fff;
-  font-family: Rosarivo, serif;
+  /* font-family: Rosarivo, serif; */
 }
 
 .sp1-navMenu-su > li > a:hover {
@@ -72,7 +72,7 @@
 }
 
 .sp1-sec1 > div.su {
-  font-family: Rosarivo, serif;
+  /* font-family: Rosarivo, serif; */
   text-align: center;
   font-size: 3.2rem;
   font-weight: 600;
@@ -296,8 +296,8 @@
 }
 
 .su-cody {
-  color: #22d5ff !important;
-  font-family: "Rosarivo", serif;
+  color: rgb(20, 27, 51) !important;
+  /* font-family: "Rosarivo", serif; */
   font-weight: bolder;
 }
 
@@ -356,8 +356,8 @@
   justify-content: center;
   align-items: center;
   font-size: 2.4rem;
-  color: #22d5ff;
-  background-color: #22ffa6;
+  color: #fff;
+  background-color: rgb(20, 27, 51);
 }
 
 .sp1-sec4-card-even {
@@ -809,8 +809,8 @@ body.no-scroll {
 
   .su-cody {
     font-size: 1.8rem !important;
-    color: #22d5ff !important;
-    font-family: "Rosarivo", serif;
+    color: rgb(20, 27, 51) !important;
+    /* font-family: "Rosarivo", serif; */
     font-weight: bolder;
   }
 
